<resources>
    <string name="app_name">Personal Best</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_stats">Stats</string>
    <string name="please_wait">Please Wait</string>

    <!-- Daily view fragment strings -->
    <string name="start_record">Start Walk/Run</string>
    <string name="end_record">End Walk/Run</string>
...

    <!-- TODO: Remove or change this placeholder text -->
    <string name="placeholder_str">Place Holder</string>
    <string name="placeholder_num">0</string>
    <string name="placeholder_time">--:--:--</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add_friend">add_friend</string>
    <string name="action_refresh_friends">refresh_friends</string>
    <string name="friend_request_send_success">Request Sent!</string>
    <string name="friend_request_user_nonexist">Error: User does not exist</string>
    <string name="no_internet_connection">Error: No Internet Connection</string>
    <string name="friend_already_exists">Already Friends / Pending Approve</string>
    <string name="send_message_success">Message Sent!</string>
...
