<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".Fragments.AddFriendInputDialogFragment"
              android:orientation="vertical"
              android:gravity="center"
              style="@style/root_layout">

    <TextView
        android:id="@+id/fragment_add_friend_input_dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_add_friend_str"
        style="@style/normal_text"/>

    <EditText
        android:id="@+id/fragment_add_friend_input_dialog_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
</LinearLayout>