...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_dashboard_black_24dp"
...
